Fixed horizontal scrolling issue and added execute row tests

--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -1,3 +1,7 @@
+html{
+    overflow-x: hidden;
+}
+
 .container-fluid{
     margin: 0 !important;
     padding: 0 !important;
