--- a/client/src/css/NavMenu.css
+++ b/client/src/css/NavMenu.css
@@ -27,4 +27,5 @@
     border-radius: 0 !important;
     border-bottom: 1px solid #ccc !important;
     width: 100%;
+    padding-left: 3vw !important;
 }
